verified through example

--- a/RBToolkitExample/Base.lproj/Main.storyboard
+++ b/RBToolkitExample/Base.lproj/Main.storyboard
@@ -14,7 +14,20 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ma-VX-7Rf">
+                                <rect key="frame" x="184" y="460" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3Ag-6j-Zbc"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="1ma-VX-7Rf" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="K3M-Ud-V9x"/>
+                            <constraint firstItem="1ma-VX-7Rf" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Lxc-4e-Scz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="vXr-oN-0nU"/>
